# tree-sitter-oats

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-file.oats  go.mod  grammar.js  highlight.html  package.json  pyproject.toml  setup.py  shell.nix  tree-sitter.json
bindings/c/: tree-sitter-oats.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_oats/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOats/: oats.h
bindings/swift/TreeSitterOatsTests/: TreeSitterOatsTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
